# rust_ctrader

./: .env  Cargo.toml  README.md  build.rs
readme/: client_README.md
src/: auth.rs  ctrader.rs  lib.rs  strategies.rs  types.rs  utilities.rs
src/ctrader/: handler_functions.rs  stream_builder.rs
src/strategies/: moving_average_strategy.rs
