[package]
name = "rust_ctrader"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
prost = "0.14.3"
reqwest = { version = "0.13.1", features = ["blocking", "json", "form"] }
rustls = "0.23.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
webpki-roots = "1.0.5"

[build-dependencies]
tonic-prost-build = "0.14.2"
