[package]
name = "rust_ctrader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
dotenv = "0.15.0"
prost = "0.14.3"
reqwest = { version = "0.13.1", features = ["blocking", "json", "form"] }
round = "0.1.2"
rustls = "0.23.36"
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = "0.26.4"
tonic = "0.14.2"
tonic-prost = "0.14.2"
webpki-roots = "1.0.5"

[build-dependencies]
tonic-prost-build = "0.14.2"
